<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.akatowolf.registro.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Loggin"
        android:id="@+id/qLoggin"
        android:inputType="textPersonName"
        android:textSize="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:id="@+id/qContrasena"
        android:inputType="textPassword"
        android:textSize="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rPassword"
        android:id="@+id/qrContrasena"
        android:inputType="textPassword"
        android:textSize="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Mail"
        android:id="@+id/qMail"
        android:inputType="textEmailAddress"
        android:textSize="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datepicker"
        android:onClick="showDatePickerDialog"
        android:visibility="gone"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="fill_horizontal">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/qFemenino"
            android:text="@string/femenino"
            android:checked="false"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/qMasculino"
            android:text="@string/masculino"
            android:checked="false"/>
    </RadioGroup>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/qSpinner"
                android:entries="@array/paises"
                android:prompt="@string/pais"/>
            <EditText
                android:id="@+id/qPaises"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="paises"
                android:ems="10"
                android:focusable="false"
                android:inputType="textMultiLine" />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qFutbol"
        android:text="@string/futbol"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qVideojuegos"
        android:text="@string/videojuegos"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qMusica"
        android:text="@string/musica"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qArte"
        android:text="@string/arte"
        android:onClick="onCheckboxClicked"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:id="@+id/qAceptar"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/qMostrar"
        android:hint="@string/datos"
        android:textSize="10dp"/>

</LinearLayout>
